benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_ModExpPow2_DivMod_Mul_iter5_error.log
=== Verification Error - Iteration 5 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExpPow2_DivMod_Mul.rs
Time: 2025-09-15 19:29:36

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0277]: can't compare `{integer}` with `verus_builtin::int`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExpPow2_DivMod_Mul_impl.rs:214:17
    |
214 |         while i < n {
    |                 ^ no implementation for `{integer} < verus_builtin::int` and `{integer} > verus_builtin::int`
    |
    = help: the trait `std::cmp::PartialOrd<verus_builtin::int>` is not implemented for `{integer}`
    = help: the following other types implement trait `std::cmp::PartialOrd<Rhs>`:
              f128
              f16
              f32
              f64
              i128
              i16
              i32
              i64
            and 8 others

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error[E0277]: can't compare `{integer}` with `verus_builtin::int`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExpPow2_DivMod_Mul_impl.rs:214:17
    |
214 |         while i < n {
    |                 ^ no implementation for `{integer} < verus_builtin::int` and `{integer} > verus_builtin::int`
    |
    = help: the trait `std::cmp::PartialOrd<verus_builtin::int>` is not implemented for `{integer}`
    = help: the following other types implement trait `std::cmp::PartialOrd<Rhs>`:
              f128
              f16
              f32
              f64
              i128
              i16
              i32
              i64
            and 8 others

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
